force-app/main/default/objects/Flying_Fridge_Event__e/Flying_Fridge_Event__e.object-meta.xml
<CustomObject>
    <description>Flying Fridge events received</description>
    <label>Flying Fridge Event</label>
    <pluralLabel>Flying Fridge Events</pluralLabel>
</CustomObject>