force-app/main/default/objects/Flying_Fridge_Event__e/fields/door_open__c.field-meta.xml
<CustomField>
    <fullName>door_open__c</fullName>
    <defaultValue>false</defaultValue>
    <label>door_open</label>
    <type>Checkbox</type>
</CustomField>