force-app/main/default/objects/Flying_Fridge_Event__e/fields/serial_no__c.field-meta.xml
<CustomField>
    <fullName>serial_no__c</fullName>
    <label>serial_no</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>