force-app/main/default/objects/Flying_Fridge_Event__e/fields/temperature__c.field-meta.xml
<CustomField>
    <fullName>temperature__c</fullName>
    <label>temperature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>